mysql-stack.yaml

# -------------------
# 3. 核心服务 (Service)
# 作用：给 MySQL 一个固定的内网 IP 和 DNS 名字
# 未来 WordPress 只需要连接 host: "mysql-service" 即可，不用管 IP 变没变
# -------------------
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
    - port: 3306
  selector:
    app: mysql # 流量转发给带有 app: mysql 标签的 Pod
  clusterIP: None # Headless Service (专家技巧：数据库通常不需要负载均衡 IP，直接对点连接更好)

---

# -------------------
# 4. 部署控制器 (Deployment)
# -------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate # 数据库不支持多副本同时写，所以更新策略必须是“先杀旧，再起新”
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mariadb:10.6 # 选用 5.7 版本比较稳定，内存占用比 8.0 小
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql # MySQL 默认存放数据的位置
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc # 挂载我们上面申请的 PVC
